# coral-old

./: .gitignore  .hgignore  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  README.txt
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  HelperFunctions.h  Main.cpp  MappingGenerator.cpp  MappingGenerator.h  ModuleCompiler.cpp  ModuleCompiler.h  StreamEmitter.cpp  StreamEmitter.h  TypeDictionaryBuilder.cpp  TypeDictionaryBuilder.h  coralc  coralc.bat
src/compiler/templates/: component_base.cpp.tpl  component_base.h.tpl  cpp_block.tpl  forward_decls.tpl  mapping_enum.tpl  mapping_exception.tpl  mapping_footer.tpl  mapping_header.tpl  mapping_interface.tpl  mapping_nativeclass.tpl  mapping_struct.tpl  module_bootstrap.tpl  module_default_part.tpl  module_installer.cpp.tpl  module_installer.h.tpl  nativeclass_adapter.h.tpl  reflector_footer.tpl  reflector_header.tpl  reflector_methodcontainers.tpl  reflector_struct.tpl  revision_check.tpl
src/core/: Annotations.cpp  Annotations.h  Any.cpp  Any.h  AnyValue.cpp  AnyValue.h  ArrayRange.h  ArrayType.cpp  ArrayType.h  AttributeAndMethodContainer.cpp  AttributeAndMethodContainer.h  AttributeInfo.cpp  AttributeInfo.h  BasicReflector.cpp  BasicReflector.h  CMakeLists.txt  ClassType.cpp  ClassType.h  Common.h  Component.cpp  Component.h  ComponentType.cpp  ComponentType.h  CompositeType.cpp  CompositeType.h  Config.h.in  Coral.cpp  Coral.h  CoreException.h  Endian.h  Enum.cpp  Enum.h  EnumType.cpp  EnumType.h  Exception.cpp  Exception.h  ExceptionType.cpp  ExceptionType.h  Field.cpp  Field.h  (+71 more)
src/core/csl/: CMakeLists.txt  CSL.g  CSL.l  CSL.y  CSLLexer.cpp  CSLLexer.h  CSLParser.cpp  CSLParser.h  Error.cpp  Error.h  Loader.cpp  Loader.h  Parser.cpp  Parser.h  README.md  location.hh  parser.cc  parser.hh  position.hh  scanner.cc  scanner.hh  stack.hh
src/core/csl/antlr3c/: CMakeLists.txt
src/core/modules/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  ModulePartLoader.cpp  ModulePartLoader.h
src/core/reserved/: CMakeLists.txt  ComponentBase.cpp  ComponentBase.h  DependencyWalker.cpp  DependencyWalker.h  FileLookUp.cpp  FileLookUp.h  LexicalUtilities.cpp  LexicalUtilities.h  LexicalUtils.cpp  LexicalUtils.h  LibraryManager.cpp  LibraryManager.h  ModulePartBase.cpp  ModulePartBase.h  OS.cpp  OS.h  README.md  RefCounted.cpp  RefCounted.h  ReflectorBase.cpp  ReflectorBase.h  Uuid.cpp  Uuid.h
src/core/tools/: CMakeLists.txt  CryptoHash.cpp  CryptoHash.h  Dir.cpp  Dir.h  FileSystem.h  Library.cpp  Library.h  Properties.cpp  Properties.h  RefCounted.cpp  RefCounted.h  Sha1.cpp  Sha1.h  StringTokenizer.cpp  StringTokenizer.h
src/core/types/: Annotated.h  ArrayType.cpp  BasicReflector.cpp  BasicReflector.h  CMakeLists.txt  ClassType.cpp  ClassType.h  Component.cpp  Component.h  Enum.cpp  Enum.h  Field.h  Interface.cpp  Interface.h  Member.h  Method.cpp  Method.h  MethodBuilder.cpp  MethodBuilder.h  Namespace.cpp  Namespace.h  NativeClass.cpp  NativeClass.h  Parameter.cpp  Parameter.h  SignatureCalculator.cpp  SignatureCalculator.h  Struct.cpp  Struct.h  Type.cpp  Type.h  TypeBuilder.cpp  TypeLoader.cpp  TypeManager.cpp  TypeTransaction.cpp  TypeTransaction.h  UuidAdapter.cpp
src/core/types/csl/: Annotations.cpp  Annotations.h  CSL.y  (+4 more)
src/core/utils/: CMakeLists.txt  CryptoHash.cpp  CryptoHash.h  Library.cpp  Library.h  Properties.cpp  Properties.h  README.md  RefCounted.h  Sha1.cpp  Sha1.h  StringTokenizer.cpp  StringTokenizer.h
src/launcher/: CMakeLists.txt  Main.cpp
src/lua/: CMakeLists.txt  LuaBinding.cpp  LuaBinding.h  LuaComponent.cpp  LuaComponent.h  LuaLauncher.cpp  LuaLauncher.h  LuaModulePart.cpp  LuaModulePart.h  LuaModulePartLoader.cpp  LuaModulePartLoader.h  LuaState.cpp  LuaState.h  ModulePart.cpp  ModulePart.h  ScriptedAnnotation.cpp  Variant.cpp  Variant.h
src/lua/libs/: CMakeLists.txt  README.md
src/lua/lua52/: CMakeLists.txt
src/package/: CMakeLists.txt  coral  coral.bat  coralc  coralc.bat
tests/: CMakeLists.txt  README.md  valgrind.supp
tests/core/: AnnotationTests.cpp  AnyTests.cpp  AnyValueTests.cpp  ArrayRangeTests.cpp  ArrayTests.cpp  ArrayTypeTests.cpp  CMakeLists.txt  CSLTester.cpp  CSLTester.h  ComponentTests.cpp  ComponentTypeTests.cpp  CryptoHashTests.cpp  DependencyWalkerTests.cpp  EnumTests.cpp  EnumTypeTests.cpp  ExceptionTests.cpp  ExceptionTypeTests.cpp  FileLookUpTests.cpp  InterfaceTests.cpp  InterfaceTypeTests.cpp  LexicalUtilitiesTests.cpp  LexicalUtilsTests.cpp  LibraryTests.cpp  LogTests.cpp  Main.cpp  MethodBuilderTests.cpp  NamespaceTests.cpp  NativeClassTests.cpp  NativeClassTypeTests.cpp  OSTests.cpp  ObjectTests.cpp  PlatformTests.cpp  PropertiesTests.cpp  PseudoService.h  RangeTests.cpp  RefPtrTests.cpp  RefVectorTests.cpp  ReflectorTests.cpp  ServiceManagerTests.cpp  SignatureCalculatorTests.cpp  (+15 more)
tests/core/data/: sample.properties
tests/core/tools/: CMakeLists.txt  CryptoHashTests.cpp  DirTests.cpp  LibraryTests.cpp  StringTokenizerTests.cpp
tests/lua/: CMakeLists.txt  LuaTests.cpp  Main.cpp
tests/lua/lua/: test.lua
tests/moduleA/: AnnotationTests.cpp  CMakeLists.txt  FaultyAnnotation.cpp  File_Adapter.cpp  Main.cpp  MappingTests.cpp  ReflectionTests.cpp  StringBufferAdapter.cpp  TestAnnotation.cpp  TestComponent.cpp  TestComponent.h  Vec2D_Adapter.cpp
tests/moduleA/moduleA/: BadlySortedStruct.csl  DummyInterface.csl  FaultyAnnotation.csl  File.csl  IBat.csl  IBatman.csl  IDummy.csl  IHuman.csl  IMammal.csl  ITestAnnotation.csl  InOutTests.csl  StringBuffer.csl  TestAnnotation.csl  TestComponent.csl  TestEnum.csl  TestException.csl  TestInterface.csl  TestNamespaces.csl  TestStruct.csl  Vec2D.csl  Vec2F.csl  Vec2FwdDecl.csl
tests/moduleB/: CMakeLists.txt  Main.cpp  ModulePart.cpp  ModulePart.h  ModuleTests.cpp
tests/moduleB/moduleB/: LuaScriptedA.csl  LuaScriptedB.csl  LuaScriptedEmpty.csl  LuaScriptedError.csl  LuaScriptedMissing.csl  LuaScriptedNoArg.csl  components.lua  empty.lua  faulty.lua  moduleB.csl
tests/performance/: CMakeLists.txt  Main.cpp  PerformanceTests.cpp  PerformanceTests.lua
tests/regen/: CMakeLists.txt  Main.cpp
(+683 files in other folders)
