################################################################################
# About This Directory:
#	This is the parent dir of the main deployable targets.
################################################################################

ADD_SUBDIRECTORY( core )
ADD_SUBDIRECTORY( compiler )
ADD_SUBDIRECTORY( launcher )
ADD_SUBDIRECTORY( lua )
