################################################################################
# About This Directory:
#	This is the parent dir of the main deployable targets.
################################################################################

ADD_SUBDIRECTORY( core )
ADD_SUBDIRECTORY( bin )
ADD_SUBDIRECTORY( lua )
